change protoype mode to make use of static kind of vars in Looper

--- a/looper.html
+++ b/looper.html
@@ -45,11 +45,13 @@
           loadThisOne=false;
         }
       }
-      if(loadThisOne){var newLoop=new Looper();
-      newLoop.$appendTo($("#loopersContainer"));
-      // console.log(loopsDatabase[a]);
-      newLoop.setSampler(loopsDatabase[a]);
-      loopers.push(newLoop);}
+      if(loadThisOne){
+        var newLoop=new Looper.GuiLoop();
+        newLoop.$appendTo($("#loopersContainer"));
+        // console.log(loopsDatabase[a]);
+        newLoop.setSampler(loopsDatabase[a]);
+        loopers.push(newLoop);
+      }
     }
     effectsRack=new Rack($("#channelsContainer"));
     globalTransport.onBeat(function(ev){
