creating 3d interactive environment

--- a/looper.html
+++ b/looper.html
@@ -9,7 +9,8 @@
 
     <script src="libs/jquery-3.0.0.min.js"></script>
     <script src="libs/Tone.js"></script>
-    <script src="libs/two.min.js"></script>
+    <script src="libs/three.js"></script>
+    <script src="libs/Two.min.js"></script>
 
     <script src="libs/mscomponents/syncman.js"></script>
     <script src="libs/mscomponents/jquery.mouse.js"></script>
@@ -21,6 +22,9 @@
     <script src="js/database.js"></script>
     <script src="js/Looper.js"></script>
     <script src="js/Rack.js"></script>
+
+    <script src="js/Rack.js"></script>
+
   </head>
   <body>
     <div id="listContainer"></div>
