--- a/shape3dtest2.html
+++ b/shape3dtest2.html
@@ -48,6 +48,7 @@ underMouse<!DOCTYPE html>
 		<script src="libs/three/ColladaLoader.js"></script>
 		<script src="libs/three/KeyFrameAnimation.js"></script>
 		<script src="libs/three/AnimationHandler.js"></script>
+		<script src="libs/three/Animation.js"></script>
 
 		<script src="libs/three/Detector.js"></script>
 		<script src="libs/three/stats.min.js"></script>
@@ -66,39 +67,39 @@ underMouse<!DOCTYPE html>
 		var scenery;
 		worldManager.onFrame=function(){};
 		worldManager.on('start',function(){
-		    // addFloor.call(worldManager.scene,0);
-		    var n=6;
-		    for(var a of [
-		      {name:'shaker',scale:0.05,n:+1,pos:{z:0.4}},
-					{name:'shaker',scale:0.05,n:+0.25,pos:{z:0.4}},
-		      {name:'snare',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'bass',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'clap',scale:0.02,n:+1,pos:{z:0.4}},
-		      {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'timbal',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
-		      {name:'organillo-manilla',n:+1,scale:0.1,pos:{z:0.4}},
-		      {name:'organillo-cuerpo',n:+0,scale:0.1,pos:{z:0.4}},
-		      {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
-		    ]){
-		      n+=a.n;
-		      nm=new Instrument(a.name);
-		      nm.props=a;
-		      objects.push(nm);
-		      //nm.position.set( a.pos.x, a.pos.y, a.pos.z);
-		      nm.model.scale.set( a.scale,a.scale,a.scale );
-		      nm.position.set(Math.sin(n/26.0*Math.PI*2)*2,a.pos.z,Math.cos(n/26.0*Math.PI*2)*2);
-		      // nm.model.rotation.set( - Math.PI / 2, 0, 0 );
-
-		    }
-		    addShadowedLight( 1, 1, 1, 0xffffff, 1.35 );
-		    addShadowedLight( 0.5, 1, -1, 0xffaa00, 1 );
-
-				scenery=new Scenery();
-
-
+		//     // addFloor.call(worldManager.scene,0);
+		//     var n=13;
+		//     for(var a of [
+		//       {name:'shaker',scale:0.05,n:+1,pos:{z:0.4}},
+		// 			{name:'shaker',scale:0.05,n:+0.25,pos:{z:0.4}},
+		//       {name:'snare',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'bass',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'clap',scale:0.02,n:+1,pos:{z:0.4}},
+		//       {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'timbal',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
+		//       {name:'organillo-manilla',n:+1,scale:0.1,pos:{z:0.4}},
+		//       {name:'organillo-cuerpo',n:+0,scale:0.1,pos:{z:0.4}},
+		//       {name:'umbrella',scale:0.1,n:+1,pos:{z:0.4}},
+		//     ]){
+		//       n+=a.n;
+		//       nm=new Instrument(a.name);
+		//       nm.props=a;
+		//       objects.push(nm);
+		//       //nm.position.set( a.pos.x, a.pos.y, a.pos.z);
+		//       nm.model.scale.set( a.scale*2,a.scale*2,a.scale*2 );
+		//       nm.position.set(Math.sin(n/26.0*Math.PI*2)*2,a.pos.z,Math.cos(n/26.0*Math.PI*2)*2);
+		//       // nm.model.rotation.set( - Math.PI / 2, 0, 0 );
+		//
+		//     }
+		//     // addShadowedLight( 1, 1, 1, 0xffffff, 1.35 );
+		//     // addShadowedLight( 0.5, 1, -1, 0xffaa00, 1 );
+		//
+				scenery=new Scenery('./models/scenery.dae');
+		//
+		//
 		});
 		worldManager.start();
 
